--- a/style.css
+++ b/style.css
@@ -263,12 +263,24 @@ body {
 }
 
 
-.portfollio_navigation-buttons li :hover {
+.portfolio-navigation_active {
+    color: rgb(255, 255, 255);
     border: 1px white solid;
-    color: white;
     border-radius: 5px;
     transition: 0.1s ease-in-out all;
 }
+
+.portfollio_navigation-buttons li:hover {
+    color: white;
+    border: 1px white solid;
+    border-radius: 5px;
+    transition: 0.1s ease-in-out all;
+}
+
+.portfollio_navigation-buttons li a:hover {
+    color: white;
+}
+
 
 .portfollio_navigation-buttons-all {
     width: 28px;
@@ -288,8 +300,8 @@ body {
 }
 
 .portfollio_navigation-buttons li a {
-    text-decoration: none;
     color: #676E89;
+    text-decoration: none;
     width: 100%;
     height: 100%;
     display: flex;
@@ -301,7 +313,8 @@ body {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    list-style-type: none; 
+    list-style-type: none;
+    padding-top: 20px; 
 }
 
 .portfollio_work-samples li {
@@ -393,156 +406,6 @@ body {
     border-radius: 31px;
 }
 
-
-.portfollio_container {
-    padding: 60px 41px 45px 41px;
-    background-color: #353a47;
-}
-
-.portfollio_container h2 {
-    font-size: 31px;
-    color: #666D89;
-}
-
-.portfollio_container p {
-    font-size: 17px;
-    margin: 20px 0px 15px 0px;
-    word-spacing: 1.1px;
-    color: #666D89;
-}
-
-.portfollio_navigation-buttons {
-    width: 290px;
-    display: flex;
-    list-style-type: none;
-    justify-content: space-between;
-}
-
-.portfollio_navigation-buttons li {
-    border: 1px #666D89 solid;
-    border-radius: 5px;
-    font-size: 12px;
-}
-
-.portfollio_navigation-buttons li :hover {
-    border: 1px white solid;
-    color: white;
-    border-radius: 5px;
-    transition: 0.1s ease-in-out all;
-}
-
-.portfollio_navigation-buttons-all {
-    width: 28px;
-    height: 23px;
-}
-
-.portfollio_navigation-buttons-design {
-    width: 80px;
-}
-
-.portfollio_navigation-buttons-graphic {
-    width: 90px;
-}
-
-.portfollio_navigation-buttons-artwork {
-    width: 60px;
-}
-
-.portfollio_navigation-buttons li a {
-    text-decoration: none;
-    color: #676E89;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.portfollio_work-samples {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    list-style-type: none;
-    padding-top: 20px;  
-}
-
-.portfollio_work-samples li {
-    margin-bottom: 12px;
-}
-
-.portfollio_work-samples li img {
-    width: 220px;
-    height: 190px;
-}
-
-.about_us-container {
-    height: 732px;
-  }
-  
-  .about_us-section {
-    height: 729px;
-    padding: 57px 40px;
-    background-color: #F2F2F2;
-  }
-  
-  .about_us-container h2 {
-    font-size: 31px;
-    color: #666D89;
-  }
-  
-  .about_us-description {
-    font-size: 17px;
-    padding: 20px 0px 50px 0px;
-    line-height: 27px;
-    word-spacing: 1px;
-    letter-spacing: 0.2px;
-  }
-  
-  .about_us-people {
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-  }
-  
-  .about_us-people li {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-  }
-  
-  .about_us-people li img {
-    width: 300px;
-    height: auto;
-  }
-  
-  .about_us-people li h3 {
-    padding: 15px 0px 9px 0px;
-    color: #AEB2C2;
-  }
-  
-  .about_us-people li  p {
-    font-size: 10px;
-    letter-spacing: 0.8px;
-    line-height: 19px;
-    color: #979DB4;
-  }
-  
-  .about_us-people li div {
-    display: flex;
-    justify-content: space-between;
-    width: 155px;
-    padding-top: 25px;
-  }
-  
-  .about_us-people li div a {
-    text-decoration: none;
-  }
-  
-  .about_us-people li div a img {
-    width: 32px;
-    height: 32px;
-}
-  
 
 .quote-section {
     color: white;
